<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.symptoms.SymptomsFragment">

    <TextView
        android:id="@+id/title_symptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:text="@string/symptoms"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintVertical_bias="0.352" />

    <View
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="119.79dp"
        android:background="@drawable/ellipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="45dp"
        android:layout_marginHorizontal="25dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_symptoms"
        app:layout_constraintVertical_bias="0.07999998">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/greeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/toothi"
                android:textAlignment="center"
                android:textAppearance="@style/text_reg_26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/circle_dark"
                android:layout_width="123dp"
                android:layout_height="123dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/circle_dark"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/greeting"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/circle_light"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:background="@drawable/circle_light"
                app:layout_constraintBottom_toBottomOf="@+id/circle_dark"
                app:layout_constraintEnd_toEndOf="@+id/circle_dark"
                app:layout_constraintStart_toStartOf="@+id/circle_dark"
                app:layout_constraintTop_toTopOf="@+id/circle_dark" />

            <ImageView
                android:layout_width="81dp"
                android:layout_height="80dp"
                android:src="@drawable/smile_teeth"
                android:elevation="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/circle_dark"
                app:layout_constraintEnd_toEndOf="@+id/circle_dark"
                app:layout_constraintStart_toStartOf="@+id/circle_dark"
                app:layout_constraintTop_toTopOf="@+id/circle_dark"
                android:contentDescription="@string/toothi_name" />

            <TextView
                android:id="@+id/greeting2"
                android:layout_width="200dp"
                android:layout_height="68dp"
                android:layout_marginTop="35dp"
                android:text="@string/how_are_you_today"
                android:textAlignment="center"
                android:textAppearance="@style/text_reg_26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/circle_light"
                app:layout_constraintStart_toStartOf="@+id/circle_light"
                app:layout_constraintTop_toBottomOf="@+id/circle_light"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/good_button"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#FFB298"
                android:text="@string/good"
                android:textAppearance="@style/text_reg_18sp"
                app:cornerRadius="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/greeting2"
                app:layout_constraintStart_toStartOf="@+id/greeting2"
                app:layout_constraintTop_toBottomOf="@+id/greeting2"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bad_button"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:backgroundTint="#FFB298"
                android:text="@string/bad"
                android:textAppearance="@style/text_reg_18sp"
                app:cornerRadius="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/good_button"
                app:layout_constraintStart_toStartOf="@+id/good_button"
                app:layout_constraintTop_toBottomOf="@+id/good_button"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>